--- a/server/package.json
+++ b/server/package.json
@@ -14,11 +14,13 @@
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "html5-qrcode": "^2.3.8",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
     "qrcode": "^1.5.1",
     "shortid": "^2.2.16",
-    "twilio": "^4.8.0"
+    "twilio": "^4.8.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
