--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -17,6 +18,7 @@
     "html5-qrcode": "^2.3.8",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
+    "node-cron": "^3.0.3",
     "qrcode": "^1.5.1",
     "shortid": "^2.2.16",
     "twilio": "^4.23.0",
